# hexlet-py-trials

./: Makefile  README.md  pyproject.toml
hexlet_py_trials/scripts/: main.py
hexlet_py_trials/src/module_one/: course_base_python.py  course_lists_python.py
hexlet_py_trials/tests/module_one/: test_course_base_python.py  test_course_lists_python.py
